--- a/manifest.json
+++ b/manifest.json
@@ -40,5 +40,11 @@
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
   },
-  "options_page": "options.html"
+  "options_page": "options.html",
+  "web_accessible_resources": [
+    {
+      "resources": ["bookmark-management.html"],
+      "matches": ["<all_urls>"]
+    }
+  ]
 } 
