--- a/package.json
+++ b/package.json
@@ -8,10 +8,19 @@
     "test:unit": "vitest",
     "test:unit:ui": "vitest --ui",
     "test:unit:coverage": "vitest --coverage",
+    "test:integration": "playwright test --project=component-integration",
+    "test:integration:headed": "playwright test --project=component-integration --headed",
+    "test:integration:ui": "playwright test --project=component-integration --ui",
+    "test:e2e": "playwright test --project=extension-e2e",
+    "test:e2e:headed": "playwright test --project=extension-e2e --headed",
+    "test:e2e:debug": "playwright test --project=extension-e2e --debug",
+    "test:e2e:ui": "playwright test --project=extension-e2e --ui",
     "test:playwright": "playwright test",
     "test:playwright:headed": "playwright test --headed",
     "test:playwright:debug": "playwright test --debug",
     "test:playwright:ui": "playwright test --ui",
+    "test:all": "npm run test:unit && npm run test:integration && npm run test:e2e",
+    "test:quick": "npm run test:unit && npm run test:integration",
     "install-browsers": "playwright install chromium",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
