refactor(ci): finalize automated quality check configuration
- Update pre-commit hook to run comprehensive validation pipeline
- Configure pre-push hook to run full quality suite including integration tests
- Add validate:full script for complete validation (lint + format + unit + visual tests)
- Separate Vitest and Playwright test runners to resolve configuration conflicts
- Ensure visual regression tests run in quality pipeline

--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "audit:security": "npm audit --audit-level=moderate",
     "audit:fix": "npm audit fix",
     "validate": "npm run check && npm test",
+    "validate:quick": "npm run check && npm run test:quick",
+    "validate:full": "npm run check && npm test && npm run test:visual:simple",
     "prepare": "husky"
   },
   "devDependencies": {
@@ -53,12 +55,10 @@
   "lint-staged": {
     "src/**/*.js": [
       "eslint --fix",
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ],
     "src/**/*.{html,css,json}": [
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ]
   }
 }
